--- a/doc/manual/changelogs.tex
+++ b/doc/manual/changelogs.tex
@@ -7,11 +7,11 @@
  \item Using tags instead of topologic dimension to identify elements
  \item Added support for dynamic elements: polygon and PLCs
  \item Added support for neighbour iteration
- \item Addes support for multiple segmentations
+ \item Added support for multiple segmentations
  \item New algorithms: intersection, seed point segmenting
 
 \subsection*{Version 1.0.1}
-This is a maintenance release, mostly fixing minor compilation problems on some compilers and opererating systems. Other notable changes
+This is a maintenance release, mostly fixing minor compilation problems on some compilers and operating systems. Other notable changes
 \begin{itemize}
   \item Added \lstinline|distance()| function for computing the distance between points, cell, etc.
   \item Voronoi quantities can now also be accessed in a more fine-grained manner: Volume and contributions for each cell attached to a vertex or edge.
