--- a/doc/manual/typebasics.tex
+++ b/doc/manual/typebasics.tex
@@ -36,11 +36,11 @@ A domain is configured with a configuration class. This configuration class defi
   \begin{center}
     \begin{tabular}{|l|l|}
       \hline
-      \lstinline|quadrilateral_2d|   &  Domain with quadilaterals, lines and vertices in 2d  \\
+      \lstinline|quadrilateral_2d|   &  Domain with quadrilaterals, lines and vertices in 2d  \\
       \hline
-      \lstinline|quadrilateral_3d|   &  Domain with quadilaterals, lines and vertices in 3d  \\
+      \lstinline|quadrilateral_3d|   &  Domain with quadrilaterals, lines and vertices in 3d  \\
       \hline
-      \lstinline|hexahedral_3d|   &  Domain with hexahedrons, quadilaterals, lines and vertices in 3d  \\
+      \lstinline|hexahedral_3d|   &  Domain with hexahedrons, quadrilaterals, lines and vertices in 3d  \\
       \hline 
     \end{tabular}
     \caption{Configurations of hypercube domains}
