--- a/doc/manual/changelogs.tex
+++ b/doc/manual/changelogs.tex
@@ -2,6 +2,8 @@
 \chapter{Change Logs}
 
 \subsection*{Version 1.1.0}
+The ViennaGrid internals have been completely redesigned for higher flexibility.
+Smaller adjustments to the user API were necessary:
 \begin{itemize}
  \item New storage layer, re-wrote most of the internals
  \item Using tags instead of topologic dimension to identify elements
@@ -9,6 +11,7 @@
  \item Added support for neighbour iteration
  \item Added support for multiple segmentations
  \item New algorithms: intersection, seed point segmenting
+\end{itemize}
 
 \subsection*{Version 1.0.1}
 This is a maintenance release, mostly fixing minor compilation problems on some compilers and operating systems. Other notable changes
