Manual: Contributors now listed in alphabetical order.

--- a/doc/manual/contributors.tex
+++ b/doc/manual/contributors.tex
@@ -10,8 +10,8 @@ Copyright {\copyright} 2011-2013 & Institute for Microelectronics, \\
 
 \textit{Main authors:}\\ 
 
-Karl Rupp (Project Head)\\
 Florian Rudolf \\
+Karl Rupp\\
 Josef Weinbub \\
 
 \vspace{1cm}
