--- a/doc/manual/algorithms.tex
+++ b/doc/manual/algorithms.tex
@@ -1,8 +1,6 @@
 \addtocontents{toc}{\protect\vfill\newpage}  %ToC would split algorithms chapter otherwise
 \chapter{Algorithms} \label{chap:algorithms}
 
- \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
- 
 The iterations and data accessors described in the previous Chapters allow for a plethora of algorithms.
 Most of them make use of basic functionalities such as the inner product of vectors, or the volume of a $n$-cell.
 {\ViennaGrid} ships with a number of such basic tools, which are listed in Tab.~\ref{tab:algorithms} and discussed in the following.
@@ -190,7 +188,8 @@ It has to be noted that the resulting refined mesh is written to a new domain, t
  \begin{lstlisting}
  DomainType refined_domain;
  SegmentationType refined_segmentation;
- viennagrid::refine_uniformly(domain, segmentation, refined_domain, refined_segmentation);
+ viennagrid::refine_uniformly(domain,         segmentation,
+                              refined_domain, refined_segmentation);
  \end{lstlisting}
 
  The local refinement of a mesh requires that the respective cells or edges for refinement are tagged. This refinement information is applied to the domain using accessors or fields, cf.~Chapter \ref{chap:data}.
@@ -210,11 +209,16 @@ It has to be noted that the resulting refined mesh is written to a new domain, t
  DomainType refined_domain;
  viennagrid::cell_refine(domain, refined_domain, cell_refinement_accessor);
  \end{lstlisting}
+ 
+ \pagebreak
+ 
  or, for segmentations
  \begin{lstlisting}
  DomainType refined_domain;
  SegmentationType refined_segmentation;
- viennagrid::cell_refine(domain, segmentation, refined_domain, refined_segmentation, cell_refinement_accessor);
+ viennagrid::cell_refine(domain,         segmentation,
+                         refined_domain, refined_segmentation,
+                         cell_refinement_accessor);
  \end{lstlisting}
 %  Again, no expensive temporary domain is created for the refinement process thanks to the use of a proxy object.
 
@@ -286,10 +290,10 @@ It has to be noted that the resulting refined mesh is written to a new domain, t
   result_of::accessor< std::vector<ContributionType>, EdgeType >::type edge_box_volume_contributions_accessor(edge_box_volume_contributions);
   
   apply_voronoi<CellType>(
-          domain,
-          interface_areas_accessor, interfaces_contribution_accessor,
-          vertex_box_volumes_accessor, vertex_box_volume_contributions_accessor,
-          edge_box_volumes_accessor, edge_box_volume_contributions_accessor)
+        domain,
+        interface_areas_accessor, interfaces_contribution_accessor,
+        vertex_box_volumes_accessor, vertex_box_volume_contributions_accessor,
+        edge_box_volumes_accessor, edge_box_volume_contributions_accessor)
   );
  \end{lstlisting}
  
