--- a/doc/manual/iterators.tex
+++ b/doc/manual/iterators.tex
@@ -21,8 +21,8 @@ To iterate over all elements of a \lstinline|domain| of type \lstinline|DomainTy
  using namespace viennagrid;
 
  //non-const:
- typedef result_of::element_range<DomainType, ElementTag>::type    ElementRange;
- typedef result_of::iterator<ElementRange>::type          ElementIterator;
+ typedef result_of::element_range<DomainType, ElementTag>::type ElementRange;
+ typedef result_of::iterator<ElementRange>::type                ElementIterator;
 \end{lstlisting}
 For segments, the occurances of \lstinline|DomainType| and \lstinline|domain| have to be replaced by \lstinline|SegmentType| and \lstinline|segment| here and in the following.
 If \lstinline|const|-access to the elements is sufficient, the metafunction \lstinline|const_element_range| should be used instead of \lstinline|element_range|.
@@ -58,8 +58,12 @@ Once the range is set up, iteration is carried out in the usual C++ STL manner:
 \end{lstlisting}
 For reference, the complete code for printing all vertices of a domain without a \lstinline|using namespace|-directive is:
 \begin{lstlisting}
- typedef viennagrid::result_of::const_element_range<DomainType, vertex_tag>::type   ConstVertexRange;
- typedef viennagrid::result_of::iterator<ConstVertexRange>::type         ConstVertexIterator;
+ typedef viennagrid::result_of::const_element_range<
+      DomainType,
+      vertex_tag
+  >::type   ConstVertexRange;
+ typedef viennagrid::result_of::iterator<ConstVertexRange>::type
+            ConstVertexIterator;
 
  ConstVertexRange vertices = viennagrid::elements(domain);
  for (VertexIterator vit = vertices.begin();
@@ -80,7 +84,9 @@ If the range is either a vertex range of a domain, or a cell range of a domain o
 \end{lstlisting}
 It is also possible to use the range only implicitly:
 \begin{lstlisting}
- for (std::size_t i=0; i<viennagrid::elements<ElementTag>(domain).size(); ++i)
+ for (std::size_t i=0;
+                  i < viennagrid::elements<ElementTag>(domain).size();
+                ++i)
  { do_something(viennagrid::elements<ElementTag>(domain)[i]); }
 \end{lstlisting}
 However, since the repeated construction of the range object can have non-negligible setup costs, the latter code is not recommended.
@@ -96,7 +102,7 @@ Shortcut meta-function are available for ranges too
  for (VertexIterator vit = vertices.begin();
                      vit != vertices.end();
                    ++vit)
- {  std::cout << *vit << std::endl; }
+ { std::cout << *vit << std::endl; }
 \end{lstlisting}
 
 \begin{lstlisting}
@@ -113,8 +119,8 @@ In addition to an iteration over all elements of a domain or segment, it may be 
 As in the previous section, the range and iterator types are obtained from the \lstinline|element_range| and \lstinline|iterator| meta-functions:
 \begin{lstlisting}
  //non-const:
- typedef viennagrid::result_of::ncell_range<CellType, 1>::type    EdgeOnCellRange;
- typedef result_of::iterator<EdgeOnCellRange>::type    EdgeOnCellIterator;
+ typedef viennagrid::result_of::element_range<CellType, line_tag>::type    EdgeOnCellRange;
+ typedef result_of::iterator<EdgeOnCellRange>::type                        EdgeOnCellIterator;
 \end{lstlisting}
 The \lstinline|const|-version is again obtained by using \lstinline|const_element_range| instead of \lstinline|element_range|.
 Mind that the first argument of \lstinline|element_range| denotes the enclosing entity (the cell) and the second argument denotes the boundary element tag (\lstinline|line_tag| or \lstinline|edge_tag| for an edge), and thus preserves the structure already used for the type retrieval for iterations on the domain.
@@ -132,7 +138,8 @@ The following snippet print all edges of a \lstinline|element|:
 
 For all topological dimensions, an index-based iteration is possible provided that the storage of the respective boundary elements has not been disabled. The previous code snippet can thus also be written as
 \begin{lstlisting}
- EdgeOnCellRange edges_on_cell = viennagrid::elements<viennagrid::edge_tag>(element);
+ EdgeOnCellRange edges_on_cell =
+        viennagrid::elements<viennagrid::edge_tag>(element);
  for (std::size_t i=0; i<edges_on_cell.size(); ++i)
  { 
    do_something(edges_on_cell[i]);
@@ -140,7 +147,9 @@ For all topological dimensions, an index-based iteration is possible provided th
 \end{lstlisting}
 or
 \begin{lstlisting}
- for (std::size_t i=0; i<viennagrid::elements<viennagrid::edge_tag>(element).size(); ++i)
+ for (std::size_t i=0;
+                  i < viennagrid::elements<viennagrid::edge_tag>(element).size();
+                ++i)
  {
    std::cout << viennagrid::elements<viennagrid::edge_tag>(element)[i] << std::endl;
  }
@@ -153,7 +162,9 @@ Finally, {\ViennaGrid} allows for iterations over the vertices of boundary eleme
 The correct orientation of vertices with respect to the hosting element is established by the free function \lstinline|local_vertex()|. 
 For instance, the vertices of a boundary element \lstinline|boundary_element| at the boundary of an element \lstinline|element| are printed in local orientation using the code lines
 \begin{lstlisting}
- for (std::size_t i=0; i<viennagrid::vertices(boundary_element).size(); ++i)
+ for (std::size_t i=0;
+                  i < viennagrid::vertices(boundary_element).size();
+                ++i)
    std::cout << viennagrid::local_vertex(element, boundary_element, i) << std::endl;
 \end{lstlisting}
 The use of \lstinline|local_vertex| can be read as follows: For the element \lstinline|element|, return the vertex of the boundary element \lstinline|boundary_element| at local position $i$.
@@ -174,8 +185,13 @@ Assuming that a vertex type \lstinline|VertexType| is already defined, the range
 using the \lstinline|coboundary_range| and \lstinline|iterator| metafunctions in the \lstinline|viennagrid| namespace:
 \begin{lstlisting}
  //non-const:
- typedef result_of::coboundary_range<DomainType, VertexType, edge_tag>::type  EdgeOnVertexRange;
- typedef result_of::iterator<EdgeOnVertexRange>::type EdgeOnVertexIterator;
+ typedef result_of::coboundary_range<
+      DomainType,
+      VertexType,
+      edge_tag
+   >::type  EdgeOnVertexRange;
+ typedef result_of::iterator<EdgeOnVertexRange>::type
+            EdgeOnVertexIterator;
 \end{lstlisting}
 The first argument to \lstinline|coboundary_range| is the context set $\Omega$, the second is the reference element for the iteration, and the third argument is the element tag of the elements in the range.
 A range of \lstinline|const|-edges is obtained using the \lstinline|const_coboundary_range| metafunction instead of the non-\lstinline|const| metafunction \lstinline|coboundary_range|.
@@ -185,12 +201,18 @@ To set up the range object, the \lstinline|coboundary_elements| function from th
 for setting up a coboundary range: The first argument refers to the enclosing container of elements and must be either a domain or a segment and the second argument is the reference element.
 The range holding all edges in the \lstinline|domain| sharing a common vertex \lstinline|v| is thus set up as
 \begin{lstlisting}
- EdgeOnVertexRange edges_on_v = viennagrid::coboundary_elements<VertexType, edge_tag>(domain, v);
+ EdgeOnVertexRange edges_on_v =
+      viennagrid::coboundary_elements<VertexType, edge_tag>(domain, v);
 \end{lstlisting}
+
+\pagebreak
+
 If the range should hold only the coboundary edges from a segment \lstinline|seg|, the above code line has to be modified to
 \begin{lstlisting}
- EdgeOnVertexRange edges_on_v = viennagrid::coboundary_elements<VertexType, edge_tag>(seg, v);
+ EdgeOnVertexRange edges_on_v =
+      viennagrid::coboundary_elements<VertexType, edge_tag>(seg, v);
 \end{lstlisting}
+
 An iteration over all edges is then possible in the usual STL-type manner. For example, all coboundary edges of $v$ in the range are printed using the code:
 \begin{lstlisting}
  for (EdgeOnVertexIterator eovit = edges_on_v.begin();
@@ -200,8 +222,10 @@ An iteration over all edges is then possible in the usual STL-type manner. For e
 \end{lstlisting}
 One may also use a shorter form that does not set up the range explicitly:
 \begin{lstlisting}
- for (EdgeOnVertexIterator eovit = viennagrid::coboundary_elements<VertexType, edge_tag>(domain, v).begin();
-                           eovit != viennagrid::coboundary_elements<VertexType, edge_tag>(domain, v).end();
+ for (EdgeOnVertexIterator eovit = viennagrid::coboundary_elements<
+                                  VertexType, edge_tag>(domain, v).begin();
+                           eovit != viennagrid::coboundary_elements<
+                                  VertexType, edge_tag>(domain, v).end();
                          ++eovit)
  { std::cout << *eovit << std::endl; }
 \end{lstlisting}
@@ -215,9 +239,13 @@ Random access, i.e.~\lstinline|operator[]| is available for all topological leve
 \end{lstlisting}
 or 
 \begin{lstlisting}
-  for (std::size_t i=0; i<viennagrid::coboundary_elements<VertexType, edge_tag>(domain, v).size(); ++i)
+  for (std::size_t i=0;
+                   i < viennagrid::coboundary_elements<
+                        VertexType, edge_tag>(domain, v).size();
+                 ++i)
   {
-    std::cout << viennagrid::coboundary_elements<VertexType, edge_tag>(domain, v)[i] << std::endl;
+    std::cout << viennagrid::coboundary_elements<
+      VertexType, edge_tag>(domain, v)[i] << std::endl;
   }
 \end{lstlisting}
 where the latter form is not recommended for reasons of overheads involved in setting up the tempoarary ranges.
@@ -238,8 +266,13 @@ Assuming that a triangle type \lstinline|TriangleType| is already defined, the r
 using the \lstinline|neighbour_range| and \lstinline|iterator| metafunctions in the \lstinline|viennagrid| namespace:
 \begin{lstlisting}
  //non-const:
- typedef result_of::neighbour_range<DomainType, TriangleType, vertex_tag>::type  NeighbourTriangleRange;
- typedef result_of::iterator<NeighbourTriangleRange>::type NeighbourTriangleIterator;
+ typedef result_of::neighbour_range<
+      DomainType,
+      TriangleType,
+      vertex_tag
+   >::type  NeighbourTriangleRange;
+ typedef result_of::iterator<NeighbourTriangleRange>::type
+            NeighbourTriangleIterator;
 \end{lstlisting}
 The first argument to \lstinline|neighbour_range| is the context set $\Omega$, the second is the reference element type for the iteration, and the third argument is the connector element tag.
 A range of \lstinline|const|-edges is obtained using the \lstinline|const_neighbour_range| metafunction instead of the non-\lstinline|const| metafunction \lstinline|neighbour_range|.
@@ -249,24 +282,31 @@ To set up the range object, the \lstinline|neighbour_elements| function from the
 for setting up a neighbour range: The first argument refers to the enclosing container of elements and must be either a domain or a segment and the second argument is the reference element.
 The range holding all triangles in the \lstinline|domain| sharing a common vertex with triangle \lstinline|t| is thus set up as
 \begin{lstlisting}
- EdgeOnVertexRange neighbour_triangles_of_t = viennagrid::neighbour_elements<TriangleType, vertex_tag>(domain, t);
+ EdgeOnVertexRange neighbour_triangles_of_t =
+    viennagrid::neighbour_elements<TriangleType, vertex_tag>(domain, t);
 \end{lstlisting}
 If the range should hold only the neighbour triangles from a segment \lstinline|seg|, the above code line has to be modified to
 \begin{lstlisting}
- EdgeOnVertexRange neighbour_triangles_of_t = viennagrid::neighbour_elements<TriangleType, vertex_tag>(seg, t);
+ EdgeOnVertexRange neighbour_triangles_of_t =
+    viennagrid::neighbour_elements<TriangleType, vertex_tag>(seg, t);
 \end{lstlisting}
 An iteration over all triangles is then possible in the usual STL-type manner. For example, all neighbour triangles of \lstinline|t| in the range are printed using the code:
 \begin{lstlisting}
  for (NeighbourTriangleIterator ntit = neighbour_triangles_of_t.begin();
-                           ntit != neighbour_triangles_of_t.end();
-                         ++ntit)
+                                ntit != neighbour_triangles_of_t.end();
+                              ++ntit)
  { std::cout << *ntit << std::endl; }
 \end{lstlisting}
+
+\pagebreak
+
 One may also use a shorter form that does not set up the range explicitly:
 \begin{lstlisting}
- for (NeighbourTriangleIterator ntit = viennagrid::neighbour_elements<TriangleType, vertex_tag>(domain, t).begin();
-                           ntit != viennagrid::neighbour_elements<TriangleType, vertex_tag>(domain, t).end();
-                         ++ntit)
+ for (NeighbourTriangleIterator ntit = viennagrid::neighbour_elements<
+                                    TriangleType, vertex_tag>(domain, t).begin();
+                                ntit != viennagrid::neighbour_elements<
+                                    TriangleType, vertex_tag>(domain, t).end();
+                              ++ntit)
  { std::cout << *ntit << std::endl; }
 \end{lstlisting}
 
@@ -279,9 +319,13 @@ Random access, i.e.~\lstinline|operator[]| is available for all topological leve
 \end{lstlisting}
 or 
 \begin{lstlisting}
-  for (std::size_t i=0; i<viennagrid::neighbour_elements<TriangleType, vertex_tag>(domain, t).size(); ++i)
+  for (std::size_t i=0;
+                   i < viennagrid::neighbour_elements<
+                        TriangleType, vertex_tag>(domain, t).size();
+                 ++i)
   {
-    std::cout << viennagrid::neighbour_elements<TriangleType, vertex_tag>(domain, t)[i] << std::endl;
+    std::cout << viennagrid::neighbour_elements<
+      TriangleType, vertex_tag>(domain, t)[i] << std::endl;
   }
 \end{lstlisting}
 where the latter form is not recommended for reasons of overheads involved in setting up the tempoarary ranges.
